fix: border radius and customizer sticky header js fix added for the width of the scrollbar.

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -482,13 +482,17 @@
 }
 
 .accordion-section-content::-webkit-scrollbar-thumb, .wp-full-overlay-sidebar-content::-webkit-scrollbar-thumb {
-  border-radius: 0;
+  border-radius: 10px;
   background-color: #d8d8d8;
 }
 
 .accordion-section-content::-webkit-scrollbar-track, .wp-full-overlay-sidebar-content::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.3);
   width: 8px;
+}
+
+.wp-full-overlay-sidebar:after {
+  display: none;
 }
 
 #customize-theme-controls .control-section-ast-section-separator {
@@ -1647,7 +1651,7 @@ span.select2-container.select2-container--default.select2-container--open li.sel
 }
 
 .accordion-section-content::-webkit-scrollbar-thumb, .wp-full-overlay-sidebar-content::-webkit-scrollbar-thumb {
-  border-radius: 0;
+  border-radius: 10px;
   background-color: #d8d8d8;
 }
 
