--- a/inc/customizer/custom-controls/customizer-style.scss
+++ b/inc/customizer/custom-controls/customizer-style.scss
@@ -6,7 +6,7 @@
 }
 
 .accordion-section-content::-webkit-scrollbar-thumb, .wp-full-overlay-sidebar-content::-webkit-scrollbar-thumb {
-    border-radius: 0;
+    border-radius: 10px;
     background-color: #d8d8d8;
 }
 
